Bug 40142 - Table of Contents from Custom Styles ignores level limit
Summary: Table of Contents from Custom Styles ignores level limit
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.2 release
Hardware: Other All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.6.0 target:24.8.0 target:24.2.4
Keywords:
Depends on:
Blocks: TableofContents-Indexes
  Show dependency treegraph
 
Reported: 2011-08-16 07:39 UTC by Urmas
Modified: 2024-05-07 08:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample (9.68 KB, application/vnd.oasis.opendocument.text)
2011-08-16 17:35 UTC, Urmas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2011-08-16 07:39:38 UTC
1. Create 4-level hierarchy of custom styles
2. Insert TOC: "include upto level 2", "from custom styles", assign your styles levels 1-4

Result: TOC contains all 4 levels;
Expected: TOC contains only 1st and 2nd level.
Comment 1 m_a_riosv 2011-08-16 16:03:03 UTC
Can attach a sample file?
Comment 2 Urmas 2011-08-16 17:35:38 UTC
Created attachment 50290 [details]
Sample
Comment 3 Björn Michaelsen 2011-12-23 12:41:10 UTC Comment hidden (obsolete)
Comment 4 QA Administrators 2014-06-25 17:37:58 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2015-07-18 17:44:33 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2015-10-23 16:55:53 UTC
Repro with test file. Created new ToC.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: fcc2415ade6ae93710bbbda9f7e163045e323105
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-21_16:55:13
Locale: fi-FI (fi_FI)
Comment 7 QA Administrators 2016-11-08 11:31:43 UTC Comment hidden (obsolete)
Comment 8 Roman Kuznetsov 2018-07-29 11:36:18 UTC
still repro in LO 6.1.0.1
Comment 9 QA Administrators 2019-07-30 03:15:00 UTC Comment hidden (obsolete)
Comment 10 QA Administrators 2021-07-30 06:22:24 UTC Comment hidden (obsolete)
Comment 11 Roman Kuznetsov 2023-03-15 08:16:50 UTC
https://gerrit.libreoffice.org/c/core/+/148886
Comment 12 Commit Notification 2023-03-15 11:00:57 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c04c4474236cc50009aea6d89f7c443c861af19

tdf#40142 - Consider level settings of the various text nodes

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-05-06 11:44:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7178d6197b892e456a8db8a3d085a24bfd52cf32

tdf#40142 sw: only check level for table of contents

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2024-05-07 08:43:22 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/fdd44d9e7c6066aac8572d6d78dedef339b6058e

tdf#40142 sw: only check level for table of contents

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.