tdf#40142 - Consider level settings of the various text nodes

Consider level settings of the various text nodes when creating a TOC
from custom styles.

Change-Id: I70759f9bcf63e8591ce89bc71afabb1da0c2f29c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148886
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>